二进制实战部署/杭州I部署yaml/kubernetes/SCORE_CARD_WORK/app/score-ingress.yaml
#ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: test-ns
  name: score-ingress
spec:
  rules:
  - host: nv.study.com
    http:
      paths:
      - path: /score
        backend:
          serviceName: score-service
          servicePort: 80
